# house-scrapper

./: .gitignore  README.md  main.py  pyproject.toml  scrapper.py
conf/: __init__.py  logger.py  vars.example.toml
persistence/: transactions.py
utils/: get_headers.py  parse_item.py
