[tool.poetry]
name = "house-scrapper"
version = "0.1.0"
description = "A package for finding houses for rental scrapping websites"
authors = ["Ale Sánchez <hi@alesanchez.es>"]
license = "Unlicense"

[tool.poetry.dependencies]
python = "^3.7"
beautifulsoup4 = "^4.8.2"
requests = "^2.22.0"
toml = "^0.10.0"

[tool.poetry.dev-dependencies]
pylint = "^2.4.4"
autopep8 = "^1.4.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
